--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pionapi",
-  "version": "1.1.64",
+  "version": "1.1.66",
   "description": "HTTP Api for interacting with the pioneers backend.",
   "main": "index.js",
   "scripts": {
@@ -10,7 +10,10 @@
   "author": "Jonathan Glossop",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
-    "ioredis": "^4.9.0"
+    "ioredis": "^4.9.0",
+    "react-bootstrap": "^1.0.0-beta.8"
   }
 }
