--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 site/*
 *.mtl
 *.obj
-backend/api/node_modules/*
-backend/processing/node_modules/*
+**/node_modules/**
+backend/api/certs/*
 Roact/*
 TestEZ/*
 assets/sounds/*
+commands.bat
