Database only conversion step 2
Units are now fully held in db
Data is no longer sent between master and nodes

--- a/default.project.json
+++ b/default.project.json
@@ -1,6 +1,6 @@
 {
 	"name": "Pioneers",
-	"servePort": 8000,
+	"servePort": 34872,
 	"tree": {
 		"$className": "DataModel",
 		"ReplicatedStorage": {
@@ -29,8 +29,11 @@
 		"StarterPlayer": {
 			"$className": "StarterPlayer",
 			"StarterPlayerScripts": {
-				"$ignoreUnknownInstances": true,
-				"$path": "src/client"
+				"$className": "StarterPlayerScripts",
+				"Client": {
+					"$ignoreUnknownInstances": true,
+					"$path": "src/client"
+				}
 			}
 		}
 	}
