Database only conversion complete!
- ALL state is now held in the database and loaded as required.
- ALL processing is now done on compute nodes, including user actions.
- Compute master only dispatches compute requests via user id.
- Redis data restructured, low and scalable commands/s
- Units can now be fetched via position list!
- Tiles and units support concurrent modifications via atomic ops.
- Api code now uses compute code to unify sources.
- Code using redis now fails much more gracefully.
- Significantly less network traffic due to replanned request structure.
- Editing state via direct redis edits now fully supported.
- General compute time appears to be mostly unchanged, even with
pathfinding over redis held tiles!
- Seamless updates via rollout now fully supported, only interruption is
on master update which should be rarely necessary.
- Unit behaviour is now nearly unlimited in freedom!

--- a/src/api/Dockerfile
+++ b/src/api/Dockerfile
@@ -2,10 +2,11 @@
 FROM node:8
 
 WORKDIR /app
-COPY package*.json ./
-COPY certs/* certs/
+COPY api/package*.json ./
+COPY api/certs/* certs/
 RUN npm install
-COPY . .
+COPY api/* ./
+COPY compute/* compute/
 
 # Make port 80 available to the world outside this container
 EXPOSE 443
