--- a/src/api/package.json
+++ b/src/api/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "ioredis": "^4.9.0",
+    "object-hash": "^1.3.1",
     "react-bootstrap": "^1.0.0-beta.8"
   }
 }
