--- a/src/compute/package.json
+++ b/src/compute/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "ioredis": "^4.10.0"
+    "ioredis": "^4.10.0",
+    "object-hash": "^1.3.1"
   },
   "jshintConfig": {
     "undef": true,
@@ -29,4 +30,3 @@
     }
   }
 }
-
