--- a/src/compute/package.json
+++ b/src/compute/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async-mutex": "^0.1.4",
     "express": "^4.17.1",
     "ioredis": "^4.10.0",
     "object-hash": "^1.3.1"
